blender crashes right after adding image texture to material in cycles #38501

Closed
opened 2014-02-05 16:44:58 +01:00 by Adrian Rutkowski · 20 comments

System Information
Vista 32
amd HD 4800series

Blender Version
Broken: 88843ca
Worked: 4b206af

Short description of error

blender crashes right after adding image texture to material ( in panel or in node editor)

it will crash only with image color space set to color works fine with non-color

Exact steps for others to reproduce the error

add image texture to material and press render

**System Information** Vista 32 amd HD 4800series **Blender Version** Broken: 88843ca Worked: 4b206af **Short description of error** blender crashes right after adding image texture to material ( in panel or in node editor) it will crash only with image color space set to color works fine with non-color **Exact steps for others to reproduce the error** add image texture to material and press render

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @niewinny

Added subscriber: @niewinny

Added subscriber: @brecht

Added subscriber: @brecht

Which CPU/processor model do you have? It's show in Control Panel > System I think.

Probably this is related to recent SSE optimizations which might not work on all processors.

Which CPU/processor model do you have? It's show in Control Panel > System I think. Probably this is related to recent SSE optimizations which might not work on all processors.

Intel core2 Duo E8400 3.00 GHz but working on 32 vista

Intel core2 Duo E8400 3.00 GHz but working on 32 vista

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

SIMD is disabled for x32 so this should not be a problem, but I admit I haven't really tested on x32 for ages...

SIMD is disabled for x32 so this should not be a problem, but I admit I haven't really tested on x32 for ages...

I'll have to test this a 32 bit windows build then, not sure why this would be a problem since this is a modern CPU supporting enough SSE instructions.

I'll have to test this a 32 bit windows build then, not sure why this would be a problem since this is a modern CPU supporting enough SSE instructions.
Member

Added subscriber: @Lockal

Added subscriber: @Lockal
Sv. Lockal self-assigned this 2014-02-10 13:01:39 +01:00
Member

Crash occurs in SSE code (either _mm_load_ps or cast to (__m128&) for unaligned data -- remember, that float3 and float4 are not aligned in win32). Assigned to myself.

Crash occurs in SSE code (either _mm_load_ps or cast to (__m128&) for unaligned data -- remember, that float3 and float4 are not aligned in win32). Assigned to myself.

This issue was referenced by blender/blender-addons-contrib@7096529704

This issue was referenced by blender/blender-addons-contrib@7096529704989286f30d645fae54e40c8335ec5e

This issue was referenced by 7096529704

This issue was referenced by 7096529704989286f30d645fae54e40c8335ec5e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 7096529704.

Closed by commit 7096529704.
Member

@ThomasDinges: SSE kernels are enabled on win32 (except for SSE41 and AVX).

Note for myself to retest the next msvc 2008 build from buildserver: for now I have checked only with cmake and msvc 2012.

@ThomasDinges: SSE kernels are enabled on win32 (except for SSE41 and AVX). Note for myself to retest the next msvc 2008 build from buildserver: for now I have checked only with cmake and msvc 2012.

Thanks!

Thanks!
Member

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Member

MSVC 2008 builds still crash, investigating...

MSVC 2008 builds still crash, investigating...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit bd44dcb632.

Now tested with an actual MSVC 2008 Express. This bug in MSVC 2008 in 32-bit mode is severe. If other __m128 loads from float3/float4 crash, it would be a good idea to disable SSE for MSVC 2008 in 32-bit mode.

Closed by commit bd44dcb632. Now tested with an actual MSVC 2008 Express. This bug in MSVC 2008 in 32-bit mode is severe. If other __m128 loads from float3/float4 crash, it would be a good idea to disable SSE for MSVC 2008 in 32-bit mode.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38501
No description provided.