Fix T38501: blender crashes right after adding image texture to material in cycles

Also fix very similar problem in half-float SSE conversion.