intern/cycles/kernel/kernel_film.h
@@ -75,17 +75,15 @@ ccl_device void kernel_film_convert_to_half_float(KernelGlobals *kg,
 
 	float exposure = kernel_data.film.exposure;
 
-	if(exposure == 1.0f) {
-		float4_store_half(out, in, sample_scale);
-	}
-	else {
-		float4 rgba = *in;
-		rgba.x *= exposure;
-		rgba.y *= exposure;
-		rgba.z *= exposure;
+	ccl_align(16) float4 rgba_in = *in;
 
-		float4_store_half(out, &rgba, sample_scale);
+	if(exposure != 1.0f) {
+		rgba_in.x *= exposure;
+		rgba_in.y *= exposure;
+		rgba_in.z *= exposure;
 	}
+
+	float4_store_half(out, &rgba_in, sample_scale);
 }
 
 CCL_NAMESPACE_END
